--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.2.11",
+    "@ant-design/icons": "^4.6.4",
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -11,9 +13,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "craco-less": "^1.20.0",
+    "i18next": "^20.6.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
+    "react-hook-form": "^7.14.2",
+    "react-i18next": "^11.11.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
