--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@ant-design/charts": "^1.2.11",
     "@ant-design/icons": "^4.6.4",
+    "@ckeditor/ckeditor5-build-classic": "^29.2.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^29.2.0",
+    "@ckeditor/ckeditor5-ckfinder": "^29.2.0",
+    "@ckeditor/ckeditor5-easy-image": "^29.2.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@ckeditor/ckeditor5-upload": "^29.2.0",
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -13,11 +19,16 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "craco-less": "^1.20.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "firebase": "^8.3.1",
+    "html-react-parser": "^1.3.0",
     "i18next": "^20.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.14.2",
     "react-i18next": "^11.11.4",
