--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "i18next": "^20.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.14.2",
     "react-i18next": "^11.11.4",
+    "react-number-format": "^4.7.3",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
