--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.2",
     "@ckeditor/ckeditor5-upload": "^29.2.0",
     "@craco/craco": "^6.2.0",
+    "@react-google-maps/api": "^2.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -30,6 +31,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-google-places-autocomplete": "^3.3.2",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.14.2",
     "react-i18next": "^11.11.4",
