--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "craco-less": "^1.20.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "firebase": "^8.3.1",
+    "firebase": "^8.10.0",
     "html-react-parser": "^1.3.0",
     "i18next": "^20.6.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-analytics-charts": "^1.2.12",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-fader": "^3.1.1",
     "react-google-places-autocomplete": "^3.3.2",
     "react-highlight-words": "^0.17.0",
     "react-hook-form": "^7.14.2",
@@ -39,6 +41,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.0.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
